fixing margins and spacing

--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -48,7 +48,9 @@ header
   margin-top: 50px
   text-align: center
   h1
-    margin-bottom: 20px
+    margin-bottom: 0px
+  img
+    margin-bottom: 0px
   .city
     width: 90%
     text-align: left
@@ -60,17 +62,17 @@ header
     width: 90%
     text-align: left
     font-weight: bold
-    +base_font (#999, 1.2em, 1.5em)
+    +base_font (#999, 1.2em, 1em)
     clear: both
     margin: auto
     margin-left: 15px
-    margin-bottom: 30px
 
 .local
   +base_font ($main_color, 1.2em, 1.5em)
   text-align: left
   margin: auto
   margin-left: 15px
+  margin-top: 10px
   font-weight: bold
   display: inline-block
   float: left
@@ -80,7 +82,7 @@ header
 .geo
   display: inline-block
   margin-left: 15px
-  margin-top: 5px
+  margin-top: 15px
   float: left
 
 .left_column
